Final version of website

--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- end of styling links -->
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("user_Dj0LJWxQ0nlWoFfOXPcDm");
-        })();
-    </script> -->
 </head>
 
 <body>
@@ -198,7 +192,7 @@
 
     <!-- footer -->
     <footer>
-        <section class="w3-panel">
+        <section class="w3-col l12">
             <p>
                 &nbsp;
                 <a target="_blank"
