--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="w3-col s8 l10">
                 <p class="jQuote_text">
-                    “Programming isn't about what you know, <br> it's about what you can
+                    “Programming isn't about what you know, it's about what you can
                     figure out.”
                 </p>
                 <p class="jQuote_name">- Chris Pine</p>
