--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     “Programming isn't about what you know, it's about what you can
                     figure out.”
                 </p>
-                <p class="jQuote_name">- Chris Pine</p>
+                <p class="jQuote_name">- Chris Pine -</p>
             </div>
         </section>
         <!-- end of quote -->
