--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- end of navigation meny -->
 
         <!-- greeting part -->
-        <section id="me" class="helloWorld w3-panel greet">
+        <section id="me" class="helloWorld w3-col s11 l12 greet">
             <p>HELLO WORLD</p>
         </section>
     </header>
