--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <body>
 
     <!-- navigation meny -->
-    <header>
-        <div class="top w3-panel">
+    <header class="top w3-panel">
             <div class="row">
                 <a href="#milojevicjovana.com" class="navbar-brand w3-col s5 l6">
                     <img src="images/my_logo.png" width="170px;" /></a>
@@ -43,15 +42,16 @@
                 <a href="#my_skills" class="w3-bar-item w3-button">my skills</a>
                 <a href="#contact" class="w3-bar-item w3-button">contact</a>
             </div>
-
-        </div>
+ </header>
+      
         <!-- end of navigation meny -->
 
+    <main>
         <!-- greeting part -->
         <section id="me" class="helloWorld w3-col s11 l12 greet">
             <p>HELLO WORLD</p>
         </section>
-    </header>
+   
     <!-- end of greeting part -->
 
     <section id="introPart" class="gradientStyle w3-panel row">
@@ -190,7 +190,7 @@
     </section>
     <!-- end of contact part -->
 
-
+ </main>
     <!-- footer -->
     <footer>
         <section class="w3-col l12">
