--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <main>
         <!-- greeting part -->
-        <section id="me" class="helloWorld w3-col s12 l12 greet">
+        <section id="me" class="helloWorld w3-panel greet">
             <p>HELLO WORLD</p>
         </section>
    
