--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </p>
             </div>
             <div class="w3-col s10 l11">
-                <img class="skills" src="images/skills.png" width="80%" />
+                <img class="skills" src="images/skills.png"/>
             </div>
         </section>
         <!-- end of skill part -->
