--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </p>
                 <span class="Navbar__Link">
                     <button id="resumeBtn" class="btn btn-dark"><a href="images/Milojevic-Jovana-CV.pdf"
-                            download="Milojevic-Jovana-CV">resume</a></button>
+                            target="_blank" >resume</a></button>
                 </span>
             </div>
 
