--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <p>
                 &nbsp;
                 <a target="_blank"
-                    href="https://www.behance.net/milojevic-design?tracking_source=search%7CMarko%20milojevic">
+                    href="https://www.behance.net/logologija">
                     &nbsp; &COPY MILOJEVIC DESIGN </a>
                 | 2019 All rights reserved
             </p>
