--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 &nbsp;
                 <a target="_blank"
                     href="https://www.behance.net/logologija">
-                    &nbsp; &COPY MILOJEVIC DESIGN </a>
+                    &nbsp; &COPY LOGOLOGIJA</a>
                 | 2019 All rights reserved
             </p>
         </section>
