--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Milojevic Jovana</title>
+    <meta name="description" content="Check my resume, if you ike what you see, reach out and give me a chance to create something great for you." />
+    <title>Milojevic Jovana: Junior Web Developer and Designer</title>
     <link rel="icon" href="images/skype.jpg" type="image/icon type">
     <!-- styling links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
