--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 
                 <p class="mDesign">Design: 
                     <a rel="nofollow" href="https://www.instagram.com/mayerdesignstudio/" target="_blank"> 
-                         <img class="mayerLogo" src="images/Asset 12.png" width="50px;" style="display:inline-flex; padding-left:5px" />
+                         <img class="mayerLogo" src="images/mayer logo-red.png" width="50px;" style="display:inline-flex; padding-left:5px" />
                     </a>
                 </p>
             </div>
