--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     I trive to improve my knowledge and skills in order to advance my career in IT.
                 </p>
                 <span class="Navbar__Link">
-                    <button id="resumeBtn" class="btn btn-dark"><a href="images/Milojevic-Jovana-CV.pdf"
+                    <button id="resumeBtn" class="btn btn-dark"><a href="images/Jovana Milojevic CV.pdf"
                             target="_blank" >resume</a></button>
                 </span>
             </div>
